Very bad localization + funny dashboard

--- a/dashboard/src/index.astro
+++ b/dashboard/src/index.astro
@@ -1,7 +1,15 @@
 ---
 
----
+import Layout from "./utils/Layout.astro";---
+
+<div>
+    <Layout>
+
+    </Layout>
+</div>
 
 <style>
-
+    .content {
+        font-family: "Roboto Light", monospace;
+    }
 </style>
