--- a/dashboard/src/components/Footer.astro
+++ b/dashboard/src/components/Footer.astro
@@ -2,7 +2,7 @@
 ---
 
 <footer>
-    <div class="disclaimer">
+    <div>
         <span>
             Nabi is licensed under the Polyform 1.0 Shield License.
             Discord is a trademark of Discord Inc. Nabi is not affiliated
@@ -12,7 +12,5 @@
 </footer>
 
 <style lang="scss">
-    .disclaimer {
 
-    }
 </style>
