--- a/dashboard/src/pages/404.astro
+++ b/dashboard/src/pages/404.astro
@@ -2,7 +2,7 @@
 import Layout from "../utils/Layout.astro";
 ---
 <Layout title="404 Not Found" description="That wasn't supposed to happen!">
-    <div class="wrapper">
+    <div>
         <h1>
             That wasn't supposed to happen! What went wrong?
         </h1>
@@ -10,12 +10,5 @@ import Layout from "../utils/Layout.astro";
 </Layout>
 
 <style lang="scss">
-    :root {
 
-    }
-
-    .wrapper {
-        display: flex;
-        flex-direction: column
-    }
 </style>
